--- a/config/.env.example
+++ b/config/.env.example
@@ -3,3 +3,8 @@ HOST = localhost
 USER = root
 PASS = 
 SHMA = finance-manager
+URL = http://localhost/sistema-financas
+BASEF = http://localhost/sistema-financas/
+BASED = http://localhost/sistema-financas/app
+BASEI = http://localhost/sistema-financas/app/assets/icons
+BASES = /var/www/html/sistema-financas
