fix: Minor error

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "vitor.siqueira",
-            "email": "alvarenga.dev@gmail"
+            "email": "alvarenga.dev@gmail.com"
         }
     ],
     "require": {
